--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
+"scripts": {
+  "dev": "vite",
+  "build": "npm run build:client && npm run build:server && npm run build:prerender",
+  "build:client": "vite build",
+  "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+  "build:prerender": "node prerender",
+  "preview": "vite preview",
+  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
